test/visibility/rename/renameUsedMod/renameSameNameConflict3.good
renameSameNameConflict3.chpl:1: error: symbol L is multiply defined
note: 'LongName' was renamed to 'L' at renameSameNameConflict3.chpl:8
renameSameNameConflict3.chpl:4: note: also defined here
